--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Hard Rock Solution - Song Lyric App</title>
+    <title>music Search Application</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -44,7 +44,7 @@
 
         <main class="content-area">
             <div class="search-bar col-md-6 mx-auto">
-                <h1 class="text-center">Hard Rock Lyric Search</h1>
+                <h1 class="text-center">Music Search Application</h1>
                 <div class="search-box my-5">
                     <input id="search" type="text" class="form-control" placeholder="Enter your artist song name">
                     <button onclick="searchMusic()" class="btn btn-success search-btn">Search</button>
